fix help layout on mobile

--- a/src/components/templates/andMiniplayer.module.scss
+++ b/src/components/templates/andMiniplayer.module.scss
@@ -20,10 +20,7 @@
 }
 
 :global(.andMiniplayer--withPlayer) .helpButton {
-	bottom: $miniplayer-height + 24px;
-}
-
-.andMiniplayer :global(.BeaconContainer) {
-	bottom: 31px + 24px + 24px;
-	border: 10px solid blue;
+	@media (min-width: $breakpoint-lg) {
+		bottom: $miniplayer-height + $grid-gap;
+	}
 }
